# xsgrep

./: .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  drop_cache.c  dummy.cpp  format_check.sh  requirements.txt  xs.cpp  xspp.cpp
.github/workflows/: exe-test.yml
benchsuit/: bench_setup.py  run_full.sh  search_tools_benchmarks.py  xs_benchmarks.py
benchsuit/cmdbench/: InlineBench_benchmark.py  base.py  cmdbench.py  gnu_time_benchmark.py  main.py  read_result.py
benchsuit/results/: README.md
benchsuit/results/cache/: lena.results.meta.json  ural.results.meta.json
benchsuit/results/cache/lena/: Compressed_input_(LZ4)_0.json  Compressed_input_(LZ4)_0.json.txt  Compressed_input_(LZ4_HC)_0.json  Compressed_input_(LZ4_HC)_0.json.txt  Compressed_input_(ZStandard)_0.json  Compressed_input_(ZStandard)_0.json.txt  GNU_grep:_search_line_numbers_0.json  GNU_grep:_search_line_numbers_0.json.txt  (+50 more)
benchsuit/results/no-cache/: lena.results.meta.json  ural.results.meta.json
benchsuit/suits/line_numbers_search/: gnu_grep.json  ripgrep.json  xs_grep.json
benchsuit/suits/search_tools/: el_literal.json  el_literal_icase.json  el_literal_icase_n.json  el_literal_n.json  el_regex.json  el_regex_icase.json  el_regex_icase_n.json  el_regex_n.json  en_complex_regex.json  en_complex_regex_icase.json  en_complex_regex_icase_n.json  en_complex_regex_n.json  en_full_regex.json  en_full_regex_icase.json  en_full_regex_icase_n.json  en_full_regex_n.json  en_literal.json  en_literal_icase.json  en_literal_icase_n.json  en_literal_n.json  en_regex.json  en_regex_icase.json  en_regex_icase_n.json  en_regex_n.json  es_literal.json  es_literal_icase.json  es_literal_icase_n.json  es_literal_n.json  es_regex.json  es_regex_icase.json  es_regex_icase_n.json  es_regex_n.json  lz4_compressed_input.json  lz4_hc_compressed_input.json  zstd_compressed_input.json
benchsuit/suits/xsgrep/: compressions.json  xs_mmap.json  xs_reader_threads.json  xs_threads_compressions.json  xs_threads_literal.json  xs_threads_regex.json  xs_threads_regex_icase.json  xs_threads_regex_icase_n.json
include/xsgrep/: grep.h
include/xsgrep/tasks/: GrepOutput.h  GrepReader.h  GrepResult.h  GrepSearcher.h
include/xsgrep/xspp/: components.h
scripts/: install.sh  uninstall.sh
src/: CMakeLists.txt  Main.cpp
src/benchutil/: CMakeLists.txt  just_read.cpp
src/tasks/: GrepOutput.cpp  GrepOutput.h  GrepSearcher.cpp
src/xsgrep/: CMakeLists.txt  grep.cpp  grep.h  main.cpp
src/xsgrep/tasks/: CMakeLists.txt  GrepOutput.cpp  GrepOutput.h  GrepReader.cpp  GrepResult.cpp  GrepSearcher.cpp  GrepSearcher.h
src/xspp/: CMakeLists.txt  components.cpp  main.cpp
test/src/: CMakeLists.txt
test/src/tasks/: CMakeLists.txt  GrepReaderTest.cpp  GrepResultTest.cpp  GrepSearcherTest.cpp
testsuit/: test_xsgrep.py
testsuit/cmdtest/: __init__.py  base.py  test_xsgrep.py
(+264 files in other folders)
